IntelliJ Inspect various improvements